# Gideon-

./: .dockerignore  .env.example  .gitignore  AGENT.md  DEPLOY.md  Dockerfile  README.md  config.toml  docker-compose.yml  fly.toml  pyproject.toml
launch/: com.gideon.web.plist
scripts/: Start Gideon.command  install-login-agent.sh
src/gideon/: __init__.py  agent.py  audit.py  config.py  heartbeat.py  llm.py  main.py  memory.py  safety.py  storage.py  web.py
src/gideon/tools/: __init__.py  base.py  draft_message.py  memory_tools.py  notes.py  registry.py  reminders.py  websearch.py
src/gideon/voice/: __init__.py  capture.py  stt.py  tts.py
tests/: test_core.py
