[project]
name = "gideon"
version = "0.1.0"
description = "Gideon — a voice-first AI assistant harness"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",  # tomllib backport for 3.9/3.10
]

[project.optional-dependencies]
# Tier 3 voice. Install with: pip install -e ".[voice]"
voice = [
    "deepgram-sdk>=6.0",
    "elevenlabs>=2.0",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "pynput>=1.7",
]
# Headless server (Docker): browser-voice needs only the HTTP SDKs — no PortAudio/X11.
server = [
    "deepgram-sdk>=6.0",
    "elevenlabs>=2.0",
]
dev = ["pytest>=8.0"]

[project.scripts]
gideon = "gideon.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
